--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,10 @@
 .jumbotron {
-    padding-top: 2rem;
-    background-color: #e2edff;
+  padding-top: 6rem;
+  background-color: #e2edff;
 }
 #projects {
-    background-color: #e2edff;
+  background-color: #e2edff;
+}
+section {
+  padding-top: 5rem;
 }
