feat:add styling css and redirect in menu

--- a/repeat-boostrap/assets/css/style.css
+++ b/repeat-boostrap/assets/css/style.css
@@ -3,7 +3,7 @@
 }
 .hero {
     background-color: #e2edff;
-    padding-top: 5rem;
+    padding-top: 6rem;
     border-bottom: none;
 }
 #about {
@@ -12,6 +12,6 @@
 #project {
     background-color: #e2edff;
 }
-/* section {
+section {
     padding-top: 5rem;
-} */
+}
